--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h1 class="mb-5">B711001 KANG MINYOUNG</h1>
 							<div class="row">
 								<div class="col-md-6">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>test page</p>
 								</div>
 							</div>
 						</div>
