--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h1 class="mb-5">B711001 KANG MINYOUNG</h1>
 							<div class="row">
 								<div class="col-md-6">
-									<p>test page</p>
+									<p>Software Engineering Test Page</p>
 								</div>
 							</div>
 						</div>
