--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
 					<li><a href="collection.html">Project</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="services.html">Services</a></li>
 					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				<p class="social">
 					<span><a href="#">Facebook</a></span>
